Extract the transferable state into a separate cls
The visual state needs to be transferrable between TE navigations
since the view and vm are disposed each time.
I've also simplified the tests, the API and removed the bound-projects (plural)
concept and replaced it with a single HasBoundProject property which will work
with WPF as long as the state API will be used to set/clear the bound project.

--- a/src/Integration/TeamExplorer/ConnectSectionView.xaml
+++ b/src/Integration/TeamExplorer/ConnectSectionView.xaml
@@ -40,17 +40,17 @@
 
         <ContentControl Name="progressPlacePlaceholder"/>
 
-        <StackPanel Visibility="{Binding ConnectedServers.Count, Converter={StaticResource IntToVisibleConverter}}">
+        <StackPanel Visibility="{Binding State.ConnectedServers.Count, Converter={StaticResource IntToVisibleConverter}}">
 
             <TextBlock Style="{StaticResource SQStaticTextStyle}"
                        Text="{x:Static resx:Strings.SelectSonarQubeProjectInstruction}"
                        TextWrapping="Wrap"
-                       Visibility="{Binding BoundProjects.Count, Converter={StaticResource IntToVisibleConverter}, ConverterParameter=Invert}"
+                       Visibility="{Binding State.HasBoundProject, Converter={StaticResource TrueToVisibleConverter}, ConverterParameter=Invert}"
                        Margin="0,0,0,6"/>
 
             <TreeView x:Name="ServerTreeView"
                       Margin="0,0,0,6"
-                      ItemsSource="{Binding ConnectedServers}"
+                      ItemsSource="{Binding State.ConnectedServers}"
                       Style="{StaticResource SQTreeViewStyle}"
                       ItemContainerStyle="{StaticResource SQServerTreeViewItemStyle}">
                 <TreeView.Resources>
