Update TreeView template to remove ScrollViewer
Use a custom control template for the tree view on the SonarQube team
explorer page, which omits the ScrollViewer present in the default one.
This allows the mouse scroll wheel events to be first handled by the TE,
rather than our control.

--- a/src/Integration/TeamExplorer/CommonStyles.xaml
+++ b/src/Integration/TeamExplorer/CommonStyles.xaml
@@ -83,6 +83,17 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TreeView">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="True">
+                        <ItemsPresenter/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="SQTreeViewItemStyleBase" BasedOn="{StaticResource TreeViewItemStyle}" TargetType="TreeViewItem">
