SVS-118: Warning message should not have tab stop in connection window

--- a/src/Integration/Connection/UI/ConnectionInfoDialogView.xaml
+++ b/src/Integration/Connection/UI/ConnectionInfoDialogView.xaml
@@ -140,7 +140,7 @@
                                       VerticalAlignment="Top"
                                       Moniker="{x:Static vsimagecatalog:KnownMonikers.StatusWarning}"/>
                 <TextBlock Grid.Row="0" Grid.Column="1"
-                           Margin="4,0"
+                           Margin="4,0" KeyboardNavigation.IsTabStop="False"
                            Text="{x:Static resx:Strings.InsecureProtocolWarning}"
                            TextWrapping="Wrap"
                            Focusable="True"/>
