--- a/src/Integration/TeamExplorer/ConnectSectionView.xaml
+++ b/src/Integration/TeamExplorer/ConnectSectionView.xaml
@@ -76,7 +76,9 @@
 
         <StackPanel Visibility="{Binding State.ConnectedServers.Count, Converter={StaticResource IntToVisibleConverter}}">
 
-            <TextBlock Margin="0,0,0,6"
+            <TextBox x:Name="FilterTextBox" Style="{StaticResource FilterTextBox}" />
+
+            <TextBlock Margin="6,0"
                        Style="{StaticResource SQStaticTextStyle}"
                        Text="{x:Static resx:Strings.SelectSonarQubeProjectInstruction}"
                        TextWrapping="Wrap"
@@ -85,7 +87,7 @@
                                             ConverterParameter=Invert}" />
 
             <TreeView x:Name="ServerTreeView"
-                      Margin="0,0,0,6"
+                      Margin="6,3,6,6"
                       ItemContainerStyle="{StaticResource SQServerTreeViewItemStyle}"
                       ItemsSource="{Binding State.ConnectedServers}"
                       Style="{StaticResource SQTreeViewStyle}">
