SVS-118: Fix keyboard tab navigation

--- a/src/Integration/TeamExplorer/ConnectSectionView.xaml
+++ b/src/Integration/TeamExplorer/ConnectSectionView.xaml
@@ -81,7 +81,7 @@
             <TextBlock Margin="6,0"
                        Style="{StaticResource SQStaticTextStyle}"
                        Text="{x:Static resx:Strings.SelectSonarQubeProjectInstruction}"
-                       TextWrapping="Wrap"
+                       TextWrapping="Wrap" KeyboardNavigation.IsTabStop="False"
                        Visibility="{Binding State.HasBoundProject,
                                             Converter={StaticResource TrueToVisibleConverter},
                                             ConverterParameter=Invert}" />
