Add daemon activation on package init + GUI

--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -10,17 +10,15 @@
     <!--  #Design  -->
     <StackPanel Margin="5,0">
         <CheckBox x:Name="ShowServerNuGetTrustWarning"
-                  Margin="10,0"
                   Content="Display a warning about NuGet packages" />
-        <TextBlock Margin="30,5,10,5"
+        <TextBlock Margin="20,5,10,5"
                    Text="Display a warning about automatically downloading NuGet packages when establishing a SonarQube server connection."
                    TextWrapping="Wrap" />
-        <!--<CheckBox x:Name="EnableJavascriptAnalysis"
-                  Margin="10,0"
-                  Content="Enable JavaScript analysis" />
-        <StackPanel Orientation="Horizontal" Margin="30,5,10,5">
-            <TextBlock Text="Some text" />
-            <Button Margin="20,0,0,0" Content="Download" Click="OnDownloadButtonClicked" />
-        </StackPanel>-->
+
+        <TextBlock FontWeight="Bold" Text="Activate more..."/>
+        <TextBlock Margin="20,5,10,5"
+                   Text="SonarLint for Visual Studio can also analyze JavaScript files, limited to standalone mode for now. After installing JavaScript support, it will be activated for newly opened files."
+                   TextWrapping="Wrap"/>
+        <Button Margin="20,5,10,5" Content="Install JavaScript support" Click="OnInstallJavaScriptClicked" />
     </StackPanel>
 </UserControl>
