--- a/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
+++ b/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
@@ -1,9 +1,16 @@
 ﻿<Window x:Class="SonarLint.VisualStudio.Integration.Vsix.SonarLintDaemonInstaller"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Installing JavaScript support..." Height="100" Width="300"
-        ContentRendered="Window_ContentRendered">
-    <Grid Margin="20">
-        <ProgressBar Minimum="0" Maximum="100" IsIndeterminate="True" />
-    </Grid>
+        Title="Installing JavaScript support..." Height="100" Width="400"
+        ContentRendered="Window_ContentRendered" WindowStyle="None">
+    <StackPanel Margin="5,0">
+        <TextBlock Text="Installing JavaScript support..." Margin="0,5" FontWeight="Bold" FontSize="16"/>
+        <ProgressBar Minimum="0" Maximum="100" Name="pbStatus" IsIndeterminate="True" Height="20"/>
+        <Button Content="OK" IsEnabled="False" Name="okButton"
+                Padding="5" Margin="0,5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Width="50"
+                Click="okButton_Click"/>
+    </StackPanel>
 </Window>
