--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -7,18 +7,46 @@
              d:DesignWidth="300"
              mc:Ignorable="d">
 
-    <!--  #Design  -->
-    <StackPanel Margin="5,0">
-        <CheckBox x:Name="ShowServerNuGetTrustWarning"
-                  Content="Display a warning about NuGet packages" />
-        <TextBlock Margin="20,5,10,5"
-                   Text="Display a warning about automatically downloading NuGet packages when establishing a SonarQube server connection."
-                   TextWrapping="Wrap" />
+    <Grid Margin="0,0,0,5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-        <TextBlock FontWeight="Bold" Text="Activate more..."/>
-        <TextBlock Margin="20,5,10,5"
-                   Text="SonarLint for Visual Studio can also analyze JavaScript files, limited to standalone mode for now. After installing JavaScript support, it will be activated for newly opened files."
-                   TextWrapping="Wrap"/>
-        <Button Margin="20,5,10,5" Content="Install JavaScript support" Click="OnActivateMoreClicked" x:Name="ActivateMoreButton" />
-    </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Button Grid.Column="0" Grid.Row="0" Content="Activate more..." Click="OnActivateMoreClicked"
+                x:Name="ActivateButton"
+                Margin="5" Padding="5,2.5" />
+        <TextBlock Grid.Column="1" Grid.Row="0"
+                   x:Name="ActivateText"
+                   Text="Install and activate JavaScript support."
+                   Margin="5" TextWrapping="Wrap"/>
+
+        <Button Grid.Column="0" Grid.Row="0" Content="Deactivate" Click="OnDeactivateClicked"
+                x:Name="DeactivateButton" Visibility="Collapsed"
+                Margin="5" Padding="5,2.5" />
+        <TextBlock Grid.Column="1" Grid.Row="0"
+                   x:Name="DeactivateText" Visibility="Collapsed"
+                   Text="Deactivate JavaScript support."
+                   Margin="5" TextWrapping="Wrap"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="1"
+                   Text="SonarLint for Visual Studio can also analyze JavaScript files. After installing JavaScript support, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
+                   Margin="5" TextWrapping="Wrap" />
+
+        <CheckBox Grid.ColumnSpan="2" Grid.Row="2"
+                  x:Name="ShowServerNuGetTrustWarning"
+                  Content="Display a warning about NuGet packages" />
+
+        <TextBlock Grid.ColumnSpan="2" Grid.Row="3"
+                   Text="Display a warning about automatically downloading NuGet packages when establishing a SonarQube server connection."
+                   Margin="20,5,10,5" TextWrapping="Wrap" />
+
+    </Grid>
 </UserControl>
