--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d:DesignHeight="300"
-             d:DesignWidth="300"
+             d:DesignWidth="400"
              mc:Ignorable="d">
 
     <Grid Margin="0,0,0,5">
@@ -26,6 +26,7 @@
         <TextBlock Grid.Column="1" Grid.Row="0"
                    x:Name="ActivateText"
                    Text="Install and activate JavaScript support."
+                   VerticalAlignment="Center"
                    Margin="5" TextWrapping="Wrap"/>
 
         <Button Grid.Column="0" Grid.Row="0" Content="Deactivate" Click="OnDeactivateClicked"
@@ -34,10 +35,11 @@
         <TextBlock Grid.Column="1" Grid.Row="0"
                    x:Name="DeactivateText" Visibility="Collapsed"
                    Text="Deactivate JavaScript support."
+                   VerticalAlignment="Center"
                    Margin="5" TextWrapping="Wrap"/>
 
         <TextBlock Grid.Column="1" Grid.Row="1"
-                   Text="SonarLint for Visual Studio can also analyze JavaScript files. After installing JavaScript support, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
+                   Text="SonarLint can also analyze JavaScript files. After installing JavaScript support, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
                    Margin="5" TextWrapping="Wrap" />
 
         <CheckBox Grid.ColumnSpan="2" Grid.Row="2"
