--- a/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
+++ b/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
@@ -1,13 +1,14 @@
 ﻿<Window x:Class="SonarLint.VisualStudio.Integration.Vsix.SonarLintDaemonInstaller"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Installing JavaScript support..." Width="400"
+        Title="Installing JavaScript support..." MinWidth="400" MinHeight="100"
         ContentRendered="Window_ContentRendered" WindowStyle="SingleBorderWindow"
         WindowStartupLocation="CenterScreen" Topmost="True" SizeToContent="WidthAndHeight" >
     <StackPanel Margin="5">
-        <TextBlock Text="Installing JavaScript support..." Margin="0,5" FontWeight="Bold" FontSize="16"/>
-        <ProgressBar Minimum="0" Maximum="100" x:Name="ProgressBar" Height="20"/>
-        <Button Content="OK" IsEnabled="False" x:Name="OkButton"
+        <ProgressBar x:Name="ProgressBar" Minimum="0" Maximum="100" Height="20" Visibility="Visible"/>
+        <TextBlock x:Name="CompletedMessage" Text="JavaScript support is installed and activated!"
+                   HorizontalAlignment="Left" Visibility="Collapsed" Margin="0,5"/>
+        <Button Content="Close" IsEnabled="False" x:Name="OkButton"
                 Padding="5" Margin="0,5"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
